force-app/main/default/objects/ProductionControl__c/ProductionControl__c.object-meta.xml
<CustomObject>
    <label>生産管理</label>
    <nameField>
        <displayFormat>PC-{000000}</displayFormat>
        <label>生産管理番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>