force-app/main/default/objects/ProductionControl__c/fields/DeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>DeliveryDate__c</fullName>
    <label>搬入時期</label>
    <required>true</required>
    <type>Date</type>
</CustomField>