force-app/main/default/objects/ProductionControl__c/fields/Factory1__c.field-meta.xml
<CustomField>
    <fullName>Factory1__c</fullName>
    <label>製作所</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>配電</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>