force-app/main/default/objects/ProductionControl__c/fields/Factory__c.field-meta.xml
<CustomField>
    <fullName>Factory__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>場所別</label>
    <referenceTo>Factory__c</referenceTo>
    <relationshipLabel>生産管理</relationshipLabel>
    <relationshipName>ProductionControls</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>