force-app/main/default/objects/ProductionControl__c/fields/FactoryBU__c.field-meta.xml
<CustomField>
    <fullName>FactoryBU__c</fullName>
    <description>共有ルール用に場所別のBUをフローでコピーして保持</description>
    <label>場所別BU</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>水環境</fullName>
            </value>
            <value>
                <fullName>施設</fullName>
            </value>
            <value>
                <fullName>官需</fullName>
            </value>
            <value>
                <fullName>官公情報</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>