force-app/main/default/objects/ProductionControl__c/fields/PresenceDate__c.field-meta.xml
<CustomField>
    <fullName>PresenceDate__c</fullName>
    <inlineHelpText>工場立会が「有」の場合のみ入力してください。</inlineHelpText>
    <label>立会時期</label>
    <type>Date</type>
</CustomField>