force-app/main/default/objects/ProductionControl__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>製品名</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Factory1__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HG-VG-A</fullName>
            </value>
            <value>
                <fullName>HS-X</fullName>
            </value>
            <value>
                <fullName>HS-A</fullName>
            </value>
            <value>
                <fullName>特高キュービクル</fullName>
            </value>
            <value>
                <fullName>MS</fullName>
            </value>
            <value>
                <fullName>FF</fullName>
            </value>
            <value>
                <fullName>監視盤</fullName>
            </value>
            <value>
                <fullName>MELSAS</fullName>
            </value>
            <value>
                <fullName>RS盤</fullName>
            </value>
            <value>
                <fullName>M/C改造</fullName>
            </value>
            <value>
                <fullName>D-SMiree</fullName>
            </value>
            <value>
                <fullName>C/C</fullName>
            </value>
            <value>
                <fullName>C/C改造</fullName>
            </value>
            <value>
                <fullName>変圧器</fullName>
                <label>特高変圧器(ベンダーフリー)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>