force-app/main/default/objects/ProductionControl__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <label>単位</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>面</fullName>
            </value>
            <value>
                <fullName>式</fullName>
            </value>
            <value>
                <fullName>台</fullName>
            </value>
            <value>
                <fullName>個</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>